--- a/WindowExplorer/Sources/Controllers/MediaControllers/PlayerViewController/Player.storyboard
+++ b/WindowExplorer/Sources/Controllers/MediaControllers/PlayerViewController/Player.storyboard
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.Cocoa.Storyboard.XIB" version="3.0" toolsVersion="13771" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES" initialViewController="ObE-0t-P64">
+<document type="com.apple.InterfaceBuilder3.Cocoa.Storyboard.XIB" version="3.0" toolsVersion="14109" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES" initialViewController="ObE-0t-P64">
     <dependencies>
-        <plugIn identifier="com.apple.AVKitIBPlugin" version="13771"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="13771"/>
+        <plugIn identifier="com.apple.AVKitIBPlugin" version="14109"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="14109"/>
         <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -15,6 +15,12 @@
                         <rect key="frame" x="0.0" y="0.0" width="640" height="440"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <subviews>
+                            <customView translatesAutoresizingMaskIntoConstraints="NO" id="5eT-b4-flP">
+                                <rect key="frame" x="0.0" y="400" width="640" height="40"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="40" id="1uO-ac-4QX"/>
+                                </constraints>
+                            </customView>
                             <customView translatesAutoresizingMaskIntoConstraints="NO" id="Ps0-Dg-pIZ" customClass="PlayerControl" customModule="WindowExplorer" customModuleProvider="target">
                                 <rect key="frame" x="0.0" y="0.0" width="640" height="40"/>
                                 <constraints>
@@ -75,6 +81,7 @@
                         <constraints>
                             <constraint firstItem="0vf-bx-Jlv" firstAttribute="leading" secondItem="X51-8y-Yv7" secondAttribute="leading" id="3q3-NL-IBD"/>
                             <constraint firstItem="Ps0-Dg-pIZ" firstAttribute="leading" secondItem="X51-8y-Yv7" secondAttribute="leading" id="4wE-OL-iU5"/>
+                            <constraint firstAttribute="trailing" secondItem="5eT-b4-flP" secondAttribute="trailing" id="5DM-Ps-D8T"/>
                             <constraint firstItem="2ml-Y1-izE" firstAttribute="top" secondItem="X51-8y-Yv7" secondAttribute="top" constant="11" id="9sw-C8-sjd"/>
                             <constraint firstItem="Ps0-Dg-pIZ" firstAttribute="top" secondItem="0vf-bx-Jlv" secondAttribute="bottom" id="Fi3-0Y-1DW"/>
                             <constraint firstItem="2ml-Y1-izE" firstAttribute="leading" secondItem="zHy-N6-K3a" secondAttribute="trailing" constant="10" id="NqM-If-Z5W"/>
@@ -82,10 +89,12 @@
                             <constraint firstItem="Rpo-GW-82A" firstAttribute="centerX" secondItem="0vf-bx-Jlv" secondAttribute="centerX" id="YLU-P8-n3W"/>
                             <constraint firstAttribute="trailing" secondItem="0vf-bx-Jlv" secondAttribute="trailing" id="hwI-qv-g5r"/>
                             <constraint firstItem="Rpo-GW-82A" firstAttribute="centerY" secondItem="0vf-bx-Jlv" secondAttribute="centerY" id="i73-AD-mUX"/>
+                            <constraint firstItem="5eT-b4-flP" firstAttribute="top" secondItem="X51-8y-Yv7" secondAttribute="top" id="iOO-sr-M3Q"/>
                             <constraint firstAttribute="bottom" secondItem="Ps0-Dg-pIZ" secondAttribute="bottom" id="iOf-J1-XwZ"/>
                             <constraint firstAttribute="trailing" secondItem="2ml-Y1-izE" secondAttribute="trailing" constant="20" id="lKH-lU-5wq"/>
                             <constraint firstItem="zHy-N6-K3a" firstAttribute="top" secondItem="X51-8y-Yv7" secondAttribute="top" id="vfu-8G-szr"/>
                             <constraint firstItem="0vf-bx-Jlv" firstAttribute="top" secondItem="zHy-N6-K3a" secondAttribute="bottom" id="xQU-xw-f94"/>
+                            <constraint firstItem="5eT-b4-flP" firstAttribute="leading" secondItem="X51-8y-Yv7" secondAttribute="leading" id="zaF-QJ-Okc"/>
                         </constraints>
                     </view>
                     <connections>
@@ -94,6 +103,7 @@
                         <outlet property="playerStateImageView" destination="Rpo-GW-82A" id="adX-N3-pbR"/>
                         <outlet property="playerView" destination="0vf-bx-Jlv" id="6cP-UG-tfS"/>
                         <outlet property="titleLabel" destination="2ml-Y1-izE" id="Qi5-8k-2UX"/>
+                        <outlet property="windowDragArea" destination="5eT-b4-flP" id="Ida-6G-NVh"/>
                     </connections>
                 </viewController>
                 <customObject id="RVz-WL-JMy" userLabel="First Responder" customClass="NSResponder" sceneMemberID="firstResponder"/>
